# ds-rom

./: .gitignore  README.md
.github/workflows/: build.yml  release.yml
cli/: Cargo.toml
cli/src/: build.rs  dump.rs  extract.rs  main.rs
lib/: Cargo.toml
lib/src/: crc.rs  error.rs  io.rs  lib.rs  str.rs
lib/src/compress/: huffman.rs  lz77.rs  mod.rs
lib/src/crypto/: blowfish.rs  dsprot.rs  hmac_sha1.rs  mod.rs  rc4.rs  rsa.rs
lib/src/rom/: arm7.rs  arm9.rs  autoload.rs  banner.rs  build_info.rs  config.rs  file.rs  header.rs  library_entry.rs  logo.rs  mod.rs  overlay.rs  overlay_table.rs  rom.rs
lib/src/rom/raw/: arm9.rs  arm9_footer.rs  autoload_info.rs  banner.rs  build_info.rs  fat.rs  fnt.rs  header.rs  hmac_sha1_signature.rs  mod.rs  multiboot_signature.rs  overlay.rs  overlay_signature.rs  overlay_table.rs  rom.rs
lib/tests/: test_extract_build.rs
lib/tests/roms/: README.md
