[package]
name = "ds-rom-cli"
version = "0.6.1"
edition = "2021"
authors = ["Aetias <aetias@outlook.com>"]
license = "MIT"
repository = "https://github.com/AetiasHax/ds-rom"
readme = "../README.md"
description = "Command-line interface for extracting/building Nintendo DS ROMs."
publish = false

[[bin]]
name = "dsrom"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.22", features = ["derive"] }
ds-rom = { path = "../lib" }
env_logger = "0.11.5"
log = "0.4.22"
