[package]
name = "ds-rom"
version = "0.2.0"
edition = "2021"
authors = ["Aetias <aetias@outlook.com>"]
license = "MIT"
repository = "https://github.com/AetiasHax/ds-rom"
readme = "../README.md"
description = "Library for extracting/building Nintendo DS ROMs."

[dependencies]
bitfield-struct = "0.8.0"
bitreader = "0.3.8"
bytemuck = { version = "1.16.1", features = ["derive"] }
crc = "3.2.1"
image = { version = "0.25.1", default-features = false, features = ["png"] }
log = "0.4.22"
rust-bitwriter = "0.0.1"
serde = { version = "1.0.204", features = ["derive"] }
serde_yml = "0.0.10"
snafu = { version = "0.8.3", features = ["backtrace"] }
