[package]
name = "ds-rom"
version = "0.7.0"
edition = "2021"
authors = ["Aetias <aetias@outlook.com>"]
license = "MIT"
repository = "https://github.com/AetiasHax/ds-rom"
readme = "../README.md"
description = "Library for extracting/building Nintendo DS ROMs."

[dependencies]
bitfield-struct = "0.12"
bitreader = "0.3"
bytemuck = { version = "1.25", features = ["derive"] }
crc = "3.4"
encoding_rs = "0.8"
image = { version = "0.25", default-features = false, features = ["png"] }
log = "0.4"
rust-bitwriter = "0.0"
serde = { version = "1.0", features = ["derive"] }
serde-saphyr = "0.0"
sha1 = "0.10"
snafu = { version = "0.8", features = ["backtrace"] }

[dev-dependencies]
anyhow = "1.0"
env_logger = "0.11"

[lints.clippy]
needless_range_loop = "allow"
module_inception = "allow"
